<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:background="@color/yellow"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/txtTelaHotAli"
                android:textColor="@color/black"
                android:textSize="25dp"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-light">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:text="@string/txtRefeicao"
                android:layout_marginBottom="5dp"
                android:textSize="20dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:fontFamily="sans-serif-light"
                android:textStyle="bold">
            </TextView>

            <RadioButton
                android:id="@+id/chkRefeicao"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_marginTop="13dp">
            </RadioButton>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/txtLine"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="18dp">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="95dp"
                android:layout_height="20dp"
                android:text="@string/txtCustRei"
                android:layout_marginBottom="5dp"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:textSize="17dp"
                android:layout_marginTop="4dp">
            </TextView>

            <EditText
                android:id="@+id/indicaCustRei"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:hint="@string/txtIndCustRei"
                android:textColorHint="@color/black"
                android:singleLine="true"
                android:textSize="17dp"
                android:layout_marginLeft="40dp">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="125dp"
                android:layout_height="23dp"
                android:text="@string/txtQtdRei"
                android:layout_marginBottom="5dp"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:textSize="17dp"
                android:layout_marginTop="4dp">
            </TextView>

            <EditText
                android:id="@+id/indicaQtdRei"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:hint="@string/txtIndQtdRei"
                android:textColorHint="@color/black"
                android:singleLine="true"
                android:textSize="17dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="50dp">
            </EditText>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:text="@string/txtHotel"
                android:layout_marginBottom="5dp"
                android:textSize="20dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:fontFamily="sans-serif-light"
                android:textStyle="bold">
            </TextView>

            <RadioButton
                android:id="@+id/chkHotel"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_marginTop="13dp">
            </RadioButton>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/txtLine"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="18dp">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:text="@string/txtCustoMedioN"
                android:layout_marginBottom="5dp"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:textSize="17dp"
                android:layout_marginTop="4dp">
            </TextView>

            <EditText
                android:id="@+id/indicaCustoMedioN"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:hint="@string/txtIndCustoMedioN"
                android:textColorHint="@color/black"
                android:singleLine="true"
                android:textSize="17dp"
                android:layout_marginLeft="40dp">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="130dp"
                android:layout_height="20dp"
                android:text="@string/txtQtdNoites"
                android:layout_marginBottom="5dp"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:textSize="17dp"
                android:layout_marginTop="4dp">
            </TextView>

            <EditText
                android:id="@+id/indicaQtdnoites"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:hint="@string/txtIndQtdnoites"
                android:textColorHint="@color/black"
                android:singleLine="true"
                android:textSize="17dp"
                android:layout_marginLeft="10dp">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="130dp"
                android:layout_height="20dp"
                android:text="@string/txtQtdQuartos"
                android:layout_marginBottom="5dp"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:textSize="17dp"
                android:layout_marginTop="4dp">
            </TextView>

            <EditText
                android:id="@+id/indicaQtdQuartos"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:hint="@string/txtIndQtdQuartos"
                android:textColorHint="@color/black"
                android:singleLine="true"
                android:textSize="17dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="80dp">
            </EditText>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnBackHotAli"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/yellow"
                android:text="@string/txtBack"
                android:textColor="@color/black"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="40dp"
                android:textAlignment="center"
                />

            <Button
                android:id="@+id/btnAvancarHotAli"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/yellow"
                android:text="@string/txtAvancar"
                android:textColor="@color/black"
                android:layout_marginRight="60dp"
                android:layout_marginLeft="15dp"
                />


        </LinearLayout>


    </LinearLayout>
</ScrollView>

