<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/yellow"
        android:layout_marginBottom="200dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/txtInf"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-light">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="110dp"
            android:layout_height="20dp"
            android:text="@string/txtInfPessoas"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:textSize="17dp"
            android:layout_marginTop="4dp">
        </TextView>

        <EditText
            android:id="@+id/indicaQtdPessoas"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:hint="@string/txtIndQtdPessoas"
            android:textColorHint="@color/black"
            android:singleLine="true"
            android:textSize="17dp"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="15dp">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="80dp">

        <TextView
            android:layout_width="155dp"
            android:layout_height="30dp"
            android:text="@string/txtInfDuracao"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:textSize="17dp"
            android:layout_marginTop="4dp">
        </TextView>

        <EditText
            android:id="@+id/indicaInfDuracao"
            android:layout_width="130dp"
            android:layout_height="45dp"
            android:layout_marginRight="30dp"
            android:textColorHint="@color/black"
            android:singleLine="true"
            android:textSize="17dp"
            android:text="@string/txtIndInfDuracao"
            android:layout_marginBottom="15dp">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAvancarInf"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/yellow"
            android:text="@string/txtBack"
            android:textColor="@color/black"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="40dp"
            android:textAlignment="center"
            />

        <Button
            android:id="@+id/btnBackInf"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/yellow"
            android:text="@string/txtAvancar"
            android:textColor="@color/black"
            android:layout_marginRight="60dp"
            android:layout_marginLeft="15dp"
            />
    </LinearLayout>

</LinearLayout>