<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="40dp"
            android:src="@mipmap/logo_login_foreground"></ImageView>

        <EditText
            android:id="@+id/nameUsers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtUsers"
            android:layout_marginTop="40dp"
            android:textColorHint="@color/black"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:singleLine="true">
        </EditText>

        <EditText
            android:id="@+id/senhaUsers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:hint="@string/txtPassword"
            android:textColorHint="@color/black"
            android:inputType="textPassword"
            android:singleLine="true">
        </EditText>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:weightSum="100">

            <Button
                android:id="@+id/btnEntrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/yellow"
                android:text="@string/btnEntrar"
                android:textColor="@color/black"/>

            <Button
                android:id="@+id/btnCriarConta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/yellow"
                android:text="@string/btnCriar"
                android:textColor="@color/black"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>